Fonctionnalité : Enregistrer un nouvel adhérent
- Formulaire d'inscription (members/new)
- Enregistrement en base (Member + Subscription)
- Envoi d'un email de confirmation via Brevo
- Gestion globale des exceptions avec GlobalExceptionHandler (@ControllerAdvice)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# Email configuration
+
 spring.application.name=Library
+spring.mail.username=manakasina.chess@yahoo.com
+brevo.api.url=https://api.brevo.com/v3/smtp/email
+brevo.api.key=
+
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
